# youbot-ros-pkg

./: .gitignore  README.md  repository.debs  repository.rosinstall
youbot_common/youbot_description/: CMakeLists.txt  controller_plugins.xml  manifest.xml
youbot_common/youbot_description/calibration/: youbot.urdf.xacro
youbot_common/youbot_description/controller/: arm_joint_position_control.yaml  arm_joint_universal_control.yaml  base_odometry.yaml  cartesian_comliance_control.yaml  gripper_joint_position_control.yaml  gripper_position_control.yaml  youbot_arm_cartesian_interaction_controller.yaml  youbot_arm_cartesian_interaction_controller_gravity_compensation.yaml  youbot_arm_cartesian_pose_controller.yaml  youbot_arm_controller.yaml  youbot_arm_effort_controller.yaml  youbot_arm_joint_position_control.yaml  youbot_arm_joint_torque_control.yaml  youbot_arm_joint_velocity_controller.yaml  youbot_arm_velocity_controller.yaml  youbot_base_controller.yaml  youbot_base_odometry.yaml  youbot_base_odometry_origianl.yaml  youbot_interaction_controller.yaml  youbot_interaction_controller_base.yaml
youbot_common/youbot_description/examples/: arm_joint_position_control_test.cpp  arm_joint_position_control_test_.cpp  arm_joint_torque_control_test.cpp  arm_joint_velocity_control_test.cpp  arm_torque_control_test.cpp  cartesian_compliance_control_test.cpp  joint_position_control_test.cpp  keyboard_teleop_experiment.cpp  youbot_arm_cartesian_interaction_controller_test.cpp  youbot_arm_cartesian_pose_controller_test.cpp  youbot_arm_effort_test.cpp  youbot_arm_joint_torque_controller_test.cpp  youbot_arm_test.cpp  youbot_arm_velocity_test.cpp  youbot_arm_wrench_test.cpp
youbot_common/youbot_description/gazebo/: gazebo.urdf.xacro
youbot_common/youbot_description/include/: arm_joint_velocity_control.h  cartesian_compliance_control.h  joint_position_control.h  joint_state_observer_gazebo.h  youbot_arm_cartesian_interaction_controller.h  youbot_arm_cartesian_interaction_controller_gravity_compensation.h  youbot_arm_joint_torque_controller.h  youbot_interaction_controller.h  youbot_interaction_controller_base.h  youbot_universal_control.h
youbot_common/youbot_description/launch/: xacroload.launch  youbot_arm_cartesian_interaction_controller.launch  youbot_arm_cartesian_interaction_controller_gravity_compensation.launch  youbot_arm_cartesian_pose_controller.launch  youbot_arm_description.launch  youbot_arm_publisher.launch  youbot_arm_publisher_no_x.launch  youbot_arm_simulation.launch  youbot_base_description.launch  youbot_base_publisher.launch  youbot_base_publisher_no_x.launch  youbot_description.launch  youbot_gripper_description.launch  youbot_gripper_publisher.launch  youbot_interaction_controller.launch  youbot_interaction_controller_base.launch  youbot_publisher.launch  youbot_publisher_no_x.launch  youbot_sensor_publisher.launch  youbot_with_wall_description.launch  youbot_with_wall_publisher.launch
youbot_common/youbot_description/robots/: youbot-sensors.urdf.xacro  youbot.urdf.xacro  youbot_arm.urdf.xacro  youbot_base.urdf.xacro  youbot_dual_arm.urdf.xacro  youbot_gripper.urdf.xacro
youbot_common/youbot_description/src/: arm_joint_velocity_control.cpp  arm_trajectory_republisher.cpp  base_command_republisher.cpp  cartesian_compliance_control.cpp  joint_arm_publisher.cpp  joint_base_publisher.cpp  joint_effort_controller.cpp  joint_gripper_publisher.cpp  joint_position_control.cpp  joint_robot_publisher.cpp  joint_state_observer_gazebo.cpp  joint_velocity_controller.cpp  test_PositionInteractionControl.cpp  youbot_arm_cartesian_interaction_controller.cpp  youbot_arm_cartesian_interaction_controller_gravity_compensation.cpp  youbot_arm_joint_torque_controller.cpp  youbot_arm_joint_velocity_controller.cpp  youbot_interaction_controller.cpp  youbot_interaction_controller_base.cpp  youbot_universal_control.cpp
youbot_common/youbot_description/tests/: test_controller.sh  test_multi_youbot_arm.launch  test_multi_youbot_base.launch  test_urdf_model.sh  youbot_arm.urdf  youbot_base.urdf  youbot_gripper.urdf
youbot_common/youbot_description/urdf/: updated_materials.urdf.xacro
youbot_drivers/youbot_oodl/: CMakeLists.txt  manifest.xml
youbot_drivers/youbot_oodl/examples/: youbot_2nd_arm_test.cpp  youbot_arm_test.cpp  youbot_keyboard_teleop.py
youbot_drivers/youbot_oodl/launch/: command.txt  start_youbot_oodl_driver  youbot_dual_arm_oodl_driver.launch  youbot_joint_state_publisher.launch  youbot_oodl_driver.launch
youbot_drivers/youbot_oodl/src/: YouBotConfiguration.cpp  YouBotConfiguration.h  YouBotOODLWrapper.cpp  YouBotOODLWrapper.h  joint_state_observer_oodl.cpp  joint_state_observer_oodl.h  joint_trajectory_action.cpp  lowpass_filter.cpp  youbot_oodl.cpp
youbot_navigation/youbot_navigation_common/: CMakeLists.txt  manifest.xml
youbot_navigation/youbot_navigation_common/config/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
youbot_navigation/youbot_navigation_common/launch/: base_front_hokuyo_node.launch  bringup_navigation.launch
youbot_navigation/youbot_navigation_common/src/: lowpass_filter.cpp
youbot_navigation/youbot_navigation_common/test/: plot_cmd_vel  plot_cmd_vel.sh
youbot_perception/tower_of_hanoi_sdk/: .gitignore  CMakeLists.txt  Makefile  README  greenRoiConfig.cfg  manifest.xml  redRoiConfig.cfg  yellowRoiConfig.cfg
youbot_perception/tower_of_hanoi_sdk/cfg/: markers_toh  perception_sdk_ros_pkg.cfg  perception_sdk_ros_pkg.cfgc  poseEstimatorConfiguration.yaml  tower_of_hanoi_sdk.cfg
youbot_perception/tower_of_hanoi_sdk/launch/: PositionDetection.launch  WorldModel.launch  bringup_perception.launch  fake_perception.launch  kinect_tf.launch
youbot_perception/tower_of_hanoi_sdk/lib/: EuclideanClustering.cpp  EuclideanClustering.h  IterativeClosestPoint.cpp  IterativeClosestPoint.h
youbot_perception/tower_of_hanoi_sdk/msg/: Attribute.msg  Configuration.msg  Coordination.msg  SceneObject.msg  (+1 more)
youbot_perception/youbot_registration/: .gitignore  CMakeLists.txt  README  mainpage.dox  manifest.xml
(+363 files in other folders)
